--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
   </head>
 
   <body>
-    Order Summary
+    <div class="container">
+      Order Summary
 
-    You can now listen to millions of songs, audiobooks, and podcasts on any 
-    device anywhere you like!
+      You can now listen to millions of songs, audiobooks, and podcasts on any 
+      device anywhere you like!
 
-    Annual Plan
-    $59.99/year
+      Annual Plan
+      $59.99/year
 
-    Change
+      Change
 
-    Proceed to Payment
-    Cancel Order
+      Proceed to Payment
+      Cancel Order
+    </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
