Added HTML elements to content on page

--- a/index.html
+++ b/index.html
@@ -16,18 +16,29 @@
 
   <body>
     <div class="container">
-      Order Summary
+      <div class="container__image"></div>
+      <div class="container__text">
+        
+        <h1 class="text__heading">Order Summary</h1>
 
-      You can now listen to millions of songs, audiobooks, and podcasts on any 
-      device anywhere you like!
+        <p class="text__paragraf">You can now listen to millions of songs, audiobooks, and podcasts on any 
+        device anywhere you like!</p>
+      </div>
+      <div class="container__plan">
+        <div class="plan__icon"></div>
+        
+        <h3 class="plan__annual">Annual Plan</h3>
 
-      Annual Plan
-      $59.99/year
+        <p class="plan__price">$59.99/year</p>
 
-      Change
-
-      Proceed to Payment
-      Cancel Order
+        <a href="javascript:void(0);" class="plan__change">Change</h4>
+      </div>
+      <div class="container__order">
+        <button class="order__button">Proceed to Payment</button>
+      </div>
+      <div class="container__cancel">
+        <a href="javascript:void(0);" class="cancel__link">Cancel Order</a>
+      </div>
     </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
