--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   
     <title>Frontend Mentor | Order summary card</title>
 
-    <link rel="stylesheet" type="text/css" href="css\style.css">
-
-    <link rel="stylesheet" src="css\style.css">
+    <link rel="stylesheet" href="css/style.css"> 
 
   </head>
 
   <body>
     <div class="container">
-      <div class="container__image"></div>
+      <div class="container__image">
+        <img src="images/illustration-hero.svg" alt="Person dacing to the music" class="image__image">
+      </div>
       <div class="container__text">
         
         <h1 class="text__heading">Order Summary</h1>
@@ -41,8 +41,10 @@
       </div>
     </div>
     <div class="attribution">
+      <p class="attribution__text">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
+      </p>
     </div>
     
   </body>
