Added style changes to content text

--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
         device anywhere you like!</p>
       </div>
       <div class="container__plan">
-        <div class="plan__icon"></div>
-        
-        <h3 class="plan__annual">Annual Plan</h3>
+        <div class="plan__box">
+          <div class="box__icon"></div>
+          
+          <h3 class="box__annual">Annual Plan</h3>
 
-        <p class="plan__price">$59.99/year</p>
+          <p class="box__price">$59.99/year</p>
 
-        <a href="javascript:void(0);" class="plan__change">Change</h4>
+          <a href="javascript:void(0);" class="plan__change">Change</h4>
+        </div>
       </div>
       <div class="container__order">
         <button class="order__button">Proceed to Payment</button>
