--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
           <p class="box__price">$59.99/year</p>
 
-          <a href="javascript:void(0);" class="plan__change">Change</h4>
+          <a href="javascript:void(0);" class="plan__change">Change</a>
         </div>
       </div>
       <div class="container__order">
