--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
       </div>
       <div class="container__plan">
         <div class="plan__box">
-          <div class="box__icon"></div>
+          <img src="images/icon-music.svg" alt="Music note icon" class="box__icon">
           
-          <h3 class="box__annual">Annual Plan</h3>
+          <div class="box__textContainer">
+            <h4 class="box__annual">Annual Plan</h4>
 
-          <p class="box__price">$59.99/year</p>
+            <p class="box__price">$59.99/year</p>
+          </div>
 
-          <a href="javascript:void(0);" class="plan__change">Change</a>
+          <a href="javascript:void(0);" class="box__change">Change</a>
         </div>
       </div>
       <div class="container__order">
