--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="attribution">
       <p class="attribution__text">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/wiksien">Wiktor Sienkiewicz</a>.
       </p>
     </div>
     
