Added stylistic changes and cleaned up the code

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
   </head>
 
   <body>
-    <div class="container">
-      <div class="container__image">
+    <div class="purchase-container">
+      <div class="purchase-container__image">
         <img src="images/illustration-hero.svg" alt="Person dacing to the music" class="image__image">
       </div>
-      <div class="container__text">
+      <div class="purchase-container__text">
         
         <h1 class="text__heading">Order Summary</h1>
 
         <p class="text__paragraf">You can now listen to millions of songs, audiobooks, and podcasts on any 
         device anywhere you like!</p>
       </div>
-      <div class="container__plan">
+      <div class="purchase-container__plan">
         <div class="plan__box">
           <img src="images/icon-music.svg" alt="Music note icon" class="box__icon">
           
@@ -37,10 +37,10 @@
           <a href="javascript:void(0);" class="box__change">Change</a>
         </div>
       </div>
-      <div class="container__order">
+      <div class="purchase-container__order">
         <button class="order__button">Proceed to Payment</button>
       </div>
-      <div class="container__cancel">
+      <div class="purchase-container__cancel">
         <a href="javascript:void(0);" class="cancel__link">Cancel Order</a>
       </div>
     </div>
